<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:animateLayoutChanges="true">

    <LinearLayout
        android:id="@+id/layout_message_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:animateLayoutChanges="true"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/layout_message_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:animateLayoutChanges="true"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_avatar"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/user_avatar"
                    android:scaleType="fitCenter"/>

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="time"
                    android:textSize="9sp"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>

            <com.bluewhaleyt.chatgpt.utils.MarkedView
                android:id="@+id/mv_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:animateLayoutChanges="true"/>

            <!--        <com.bluewhaleyt.chatgpt.utils.EllipsizingTextView-->
            <!--            android:id="@+id/tv_message"-->
            <!--            android:layout_width="match_parent"-->
            <!--            android:layout_height="match_parent"-->
            <!--            android:text="message\nmessage"-->
            <!--            android:textSize="16sp"-->
            <!--            android:lineSpacingExtra="8dp"-->
            <!--            android:gravity="center_vertical"-->
            <!--            android:maxLines="20"-->
            <!--            android:ellipsize="end" />-->

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center">

            <Button
                android:id="@+id/btn_tell_me_more"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/tell_me_more"
                app:strokeColor="?colorOnSecondary"
                app:icon="@drawable/ic_baseline_read_more_24"
                app:iconPadding="10dp"
                android:layout_marginEnd="5dp" />

            <Button
                android:id="@+id/btn_view"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/view"
                app:strokeColor="?colorOnSecondary"
                app:icon="@drawable/ic_baseline_remove_red_eye_24"
                app:iconPadding="10dp"
                android:layout_marginEnd="5dp" />

            <Button
                android:id="@+id/btn_share"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/share"
                app:strokeColor="?colorOnSecondary"
                app:icon="@drawable/ic_baseline_share_24"
                app:iconPadding="10dp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
